--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,16 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sportyshoes_db
 spring.datasource.username=sportyshoes
 spring.datasource.password=sportyshoes
 spring.datasource.initialization-mode=always
+# Hibernate ddl auto (create, create-drop, validate, update)
+#logging.level.org.springframework=DEBUG
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+
+spring.data.web.pageable.size-parameter=size
+spring.data.web.pageable.page-parameter=page
+#spring.data.web.pageable.default-page-size=5
+spring.data.web.pageable.one-indexed-parameters=false
+spring.data.web.pageable.max-page-size=2000
+spring.data.web.pageable.prefix=
+spring.data.web.pageable.qualifier-delimiter=_
